@@ -8731,6 +8731,8 @@ return a \kbd{QC} (resp.~a \kbd{QM}) $U$ such that $T = MU$.
 
 \fun{GEN}{identity_zv}{long n} return the \typ{VECSMALL} $[1, 2, \dots, n]$.
 
+\fun{GEN}{random_zv}{long n} returns a random \kbd{zv} with $n$ components.
+
 \fun{GEN}{zv_neg}{GEN x} return $-x$. No check for overflow is done, which
 occurs in the fringe case where an entry is equal to $2^{\B-1}$.
 
