@@ -239,6 +239,7 @@ BA  81- [libpari] FFX_add, FpXY_FpXQ_evaly
 BA  82- [libpari] halfgcdii, RgX_halfgcd
 BA  83- new GP function halfgcd
 BA  84- [libpari] pari_realloc_ip
+BA  85- [libpari] random_zv
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
